--- a/templates/ingress.yaml
+++ b/templates/ingress.yaml
@@ -19,9 +19,10 @@ spec:
     http:
       paths:
         - backend:
-            name: {{ template "echoip.fullname" . }}
-            port:
-              number: {{ .Values.service.port }}
+            service:
+              name: {{ template "echoip.fullname" . }}
+              port:
+                number: {{ .Values.service.port }}
           path: /
           pathType: Prefix                
   {{ if .Values.tls }}              
