--- a/templates/cronjob-update-db.yaml
+++ b/templates/cronjob-update-db.yaml
@@ -22,7 +22,7 @@ spec:
               command: ["/tools/update-db.sh"]
               envFrom:
                 - secretRef:
-                  name: {{ template "echoip.name " . }}-secret
+                  name: echoip-secret
               volumeMounts:
                 - mountPath: /tools
                   name: tools-volume
